set "use strict" for all JS script
	modified:   anatta.js
	modified:   engine/conftree.js
	modified:   engine/core.js
	modified:   engine/metadata/atom.js
	modified:   engine/metadata/core.js
	modified:   engine/metadata/html.js
	modified:   engine/metadata/json.js
	modified:   engine/space/core.js
	modified:   engine/space/data.js
	modified:   engine/space/file.js
	modified:   engine/space/web.js
	modified:   engine/termset/builtin.js
	modified:   engine/termset/core.js
	modified:   engine/weaver/core.js
	modified:   engine/weaver/event.js
	modified:   engine/weaver/window.js
	modified:   engine/webgate/core.js
	modified:   test/agent-boot-test.js
	modified:   test/assets/agent/embeded.html
	modified:   test/assets/agent/linked.js
	modified:   test/metadata-atom-test.js
	modified:   test/metadata-html-test.js
	modified:   test/metadata-json-test.js
	modified:   test/space-core-test.js
	modified:   test/space-data-test.js
	modified:   test/space-file-test.js
	modified:   test/space-web-test.js
	modified:   test/webgate-core-test.js

--- a/test/assets/agent/embeded.html
+++ b/test/assets/agent/embeded.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <script>//<!--
+"use strict";
 //console.log("boot");
 window.addEventListener("agent-load", function (ev) {
   //console.log("load");
