--- a/examples/fileuploader/pub/index.html
+++ b/examples/fileuploader/pub/index.html
@@ -10,8 +10,7 @@
     <h2>files</h2>
     <ul id="files">
     </ul>
-
-    <input id="fileinput" type="file" name="file" />
+    <input id="fileinput" type="file" multiple="multiple" />
     <button id="upload" type="button">upload</button>
 
   </body>
