--- a/examples/w3cnews/agent/index.html
+++ b/examples/w3cnews/agent/index.html
@@ -1,8 +1,16 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>agent</title>
     <script src="script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <a id="url" href="http://www.w3.org/News/atom.xml">W3C News</a>
+    <article class="newsitem">
+      <h1 class="title"></h1>
+      <a class="href"><div class="date"></div></a>
+      <p class="desc"></p>
+    </article>
+  </body>
 </html>
