refine code, refs #26
- agent
-- get statuses with nextSibling/previousSibling
-- return HTML document with "link rel={next/prev}" header
- clinent
-- separate handling DOM and get/post from/to agent
-- handle HTML document returned from agent

:

	modified:   examples/statuses/agent/script.js
	modified:   examples/statuses/pub/index.html
	modified:   examples/statuses/pub/script.js
	new file:   examples/statuses/pub/streamer.js

--- a/examples/statuses/pub/index.html
+++ b/examples/statuses/pub/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>statuses</title>
+    <script src="streamer.js"></script>
     <script src="script.js"></script>
   </head>
   <body>
