refine code, refs #26
https://k6.kanata-jp.com/dev/issues/26#note-5

:

	modified:   examples/statuses/agent/script.js
	modified:   examples/statuses/pub/index.html
	modified:   examples/statuses/pub/script.js
	modified:   examples/statuses/pub/streamer.js
	modified:   examples/statuses/run.js

--- a/examples/statuses/pub/index.html
+++ b/examples/statuses/pub/index.html
@@ -10,7 +10,7 @@
     <h1>statuses</h1>
     <textarea id="source" rows="3" cols="60" tabindex="0">...</textarea>
     <button type="button" id="post" tabindex="0">post</button>
-    <div id="statuses"></div>
-    <button type="button" id="prev" tabindex="0">prev</button>
+    <div id="timeline"></div>
+    <button type="button" id="backward" tabindex="0">prev</button>
   </body>
 </html>
