refine code, refs #29
	modified:   examples/hackernews/agent/index.html
	modified:   examples/hackernews/agent/script.js

--- a/examples/hackernews/agent/index.html
+++ b/examples/hackernews/agent/index.html
@@ -8,8 +8,8 @@
   <body>
     <a id="rootUri" href="http://news.ycombinator.com/">Hacker News</a>
     <div class="container">
-      <h1 class="title"><a class="href"></a></h1>
-      <a class="itemHref"></a>
+      <h1 class="title"><a class="src"></a></h1>
+      <a class="href"></a>
       <hr>
       <div class="contents"></div>
     </div>
