[update] unittest example
- [add] commandline test runner using engine directly
- [update] tap.js as an unittest harness
  - update wait as "this.timeout = 5000" in each test function
  - test function when returned promise, do as async test
- [fix] set "use strict" for all script

:

	modified:   run.js
	new file:   runtest.js
	modified:   src/index.html
	modified:   src/library-test.js
	modified:   src/library.js
	modified:   src/tap.js

--- a/examples/unittest/src/index.html
+++ b/examples/unittest/src/index.html
@@ -5,19 +5,21 @@
 <title>main</title>
 <script src="library.js"></script>
 <script>
+"use strict";
+
 console.log("read");
 window.addEventListener("agent-load", function (ev) {
-    console.log("load");
     var template = document.getElementById("link");
     window.addEventListener("agent-access", function (ev) {
         if (ev.detail.request.method !== "GET") return;
         ev.detail.accept();
-        
-        var doc = document.implementation.createHTMLDocument();
+
+        var doc = document.implementation.createHTMLDocument(
+            "unittest example");
         var content = doc.importNode(template, true);
         content.href = "/unittest/";
         doc.body.appendChild(content);
-        console.log(content.outerHTML);
+
         ev.detail.respond("200", {
             "content-type": "text/html;charset=utf-8",
         }, doc.outerHTML);
