[add] "shared/" directory and anatta.shared(relpath)
- for shared resource for weaver agents. usage: examples/unittest/
- rels #34 , rels #35

:

	modified:   anatta.js
	modified:   examples/unittest/run.js
	modified:   examples/unittest/runtest.js
	modified:   examples/unittest/src/unittest.html
	renamed:    examples/unittest/src/tap.js -> shared/contrib/tap.js

--- a/examples/unittest/src/unittest.html
+++ b/examples/unittest/src/unittest.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>unittest for agent</title>
-<script src="tap.js"></script>
+<script src="/shared/contrib/tap.js"></script>
 <script src="library.js"></script>
 <script src="library-test.js"></script>
 </head>
