refine code, refs #33
	new file:   examples/locker/house/agent/gatekeeper.html
	new file:   examples/locker/house/agent/gatekeeper.js
	new file:   examples/locker/house/agent/keybox.html
	new file:   examples/locker/house/agent/keybox.js
	modified:   examples/locker/house/agent/message.html
	modified:   examples/locker/house/agent/message.js
	modified:   examples/locker/house/run.js
	new file:   examples/locker/lib/lockerauth.js
	modified:   examples/locker/person/agent/agent.html
	modified:   examples/locker/person/agent/agent.js
	new file:   examples/locker/person/agent/keybox.html
	new file:   examples/locker/person/agent/keybox.js
	modified:   examples/locker/person/pub/index.html
	new file:   examples/locker/person/pub/message/index.html
	new file:   examples/locker/person/pub/message/script.js
	modified:   examples/locker/person/pub/script.js
	modified:   examples/locker/person/run.js
	deleted:    examples/locker/house/agent/auth.html
	deleted:    examples/locker/house/agent/auth.js
	deleted:    examples/locker/house/agent/pubkey.html
	deleted:    examples/locker/house/agent/pubkey.js
	deleted:    examples/locker/person/agent/pubkey.html
	deleted:    examples/locker/person/agent/pubkey.js

--- a/examples/locker/person/agent/agent.html
+++ b/examples/locker/person/agent/agent.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>person agent</title>
+    <script src="lib:/lockerauth.js"></script>
     <script src="agent.js"></script>
   </head>
   <body>
     <h1>person agent</h1>
-    <a id="pubkey" href="root:/pubkey">pubkey</a>
+    <a id="keybox" href="root:/pubkey">pubkey</a>
   </body>
 </html>
