refine code, refs #39
	modified:   engine/galaxy/core.js
	new file:   engine/weaver/inst.js
	modified:   engine/weaver/window.js
	new file:   examples/hosting/README.ja.md
	renamed:    examples/package/admin/agent/index.html -> examples/hosting/host/agent/index.html
	new file:   examples/hosting/host/agent/script.js
	renamed:    examples/package/admin/pub/index.html -> examples/hosting/host/pub/index.html
	renamed:    examples/package/admin/pub/script.js -> examples/hosting/host/pub/script.js
	renamed:    examples/package/admin/run.js -> examples/hosting/host/run.js
	new file:   examples/hosting/store/pub/index.html
	renamed:    examples/package/fileuploader/pub/fileuploader.html -> examples/hosting/store/pub/insts/fileuploader/fileuploader.html
	renamed:    examples/package/fileuploader/pub/fileuploader.js -> examples/hosting/store/pub/insts/fileuploader/fileuploader.js
	new file:   examples/hosting/store/pub/insts/fileuploader/index.html
	renamed:    examples/package/fileuploader/pub/config.json -> examples/hosting/store/pub/insts/fileuploader/inst.json
	new file:   examples/hosting/store/pub/insts/fileuploader/manifest.html
	renamed:    examples/package/fileuploader/pub/ui.html -> examples/hosting/store/pub/insts/fileuploader/ui.html
	renamed:    examples/package/fileuploader/pub/ui.js -> examples/hosting/store/pub/insts/fileuploader/ui.js
	new file:   examples/hosting/store/pub/insts/index.html
	new file:   examples/hosting/store/pub/insts/wall/index.html
	renamed:    examples/package/wall/pub/config.json -> examples/hosting/store/pub/insts/wall/inst.json
	renamed:    examples/package/wall/pub/manifest.html -> examples/hosting/store/pub/insts/wall/manifest.html
	renamed:    examples/package/wall/pub/ui.html -> examples/hosting/store/pub/insts/wall/ui.html
	renamed:    examples/package/wall/pub/ui.js -> examples/hosting/store/pub/insts/wall/ui.js
	renamed:    examples/package/wall/pub/wall.html -> examples/hosting/store/pub/insts/wall/wall.html
	renamed:    examp

--- a/examples/hosting/host/pub/index.html
+++ b/examples/hosting/host/pub/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>package</title>
+    <title>host</title>
+    <link rel="agent" href="/inst/">
     <script src="script.js"></script>
     <style type="text/css">
       <!--
@@ -16,11 +17,11 @@
     </style>
   </head>
   <body>
-    <h1>package</h1>
-    <input type="text" id="packageUri" tabindex="0">
+    <h1>host</h1>
+    <input type="text" id="instUri" tabindex="0">
     <button type="button" id="add" tabindex="0">add</button>
-    <h2>my packages</h2>
-    <div id="packages">
+    <h2>my insts</h2>
+    <div id="insts">
     </div>
   </body>
 </html>
