--- a/examples/hosting/store/pub/insts/wiki/manifest.html
+++ b/examples/hosting/store/pub/insts/wiki/manifest.html
@@ -2,15 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>wiki package manifest</title>
+    <title>wiki inst manifest</title>
   </head>
   <body>
-    <h1>wiki package manifest</h1>
+    <h1>wiki inst manifest</h1>
     <h2 id="id">wiki</h2>
-    <h2><a rel="config" href="config.json">config</a></h2>
     <h2><a rel="ui" href="ui.html">ui</a></h2>
     <h2>description</h2>
-    <div id="description"><p>this is wiki package</p></div>
+    <div id="description"><p>this is wiki inst</p></div>
   </body>
 </html>
 
