--- a/examples/hosting/host/agent/index.html
+++ b/examples/hosting/host/agent/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>module agent</title>
+    <title>agent</title>
     <script src="script.js"></script>
   </head>
   <body>
-    <h1>module agent</h1>
-    <div id="packages">
+    <h1>agent</h1>
+    <div id="insts">
     </div>
-    <article class="package">
+    <article class="inst">
       <h1><a class="id"></a></h1>
       <p class="description"></p>
     </article>
