--- a/examples/hosting/store/pub/insts/wall/manifest.html
+++ b/examples/hosting/store/pub/insts/wall/manifest.html
@@ -2,15 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>wall package manifest</title>
+    <title>wall inst manifest</title>
   </head>
   <body>
-    <h1>wall package manifest</h1>
+    <h1>wall inst manifest</h1>
     <h2 id="id">wall</h2>
-    <h2><a rel="config" href="config.json">config</a></h2>
     <h2><a rel="ui" href="ui.html">ui</a></h2>
     <h2>description</h2>
-    <div id="description"><p>this is wall package</p></div>
+    <div id="description"><p>this is wall inst</p></div>
   </body>
 </html>
 
