refine code, refs #39
	modified:   engine/weaver/inst.js
	modified:   examples/hosting/host/agent/script.js
	modified:   examples/hosting/host/pub/index.html
	modified:   examples/hosting/store/pub/insts/fileuploader/inst.json
	modified:   examples/hosting/store/pub/insts/fileuploader/manifest.html
	modified:   examples/hosting/store/pub/insts/wall/inst.json
	modified:   examples/hosting/store/pub/insts/wall/manifest.html
	modified:   examples/hosting/store/pub/insts/wiki/inst.json
	modified:   examples/hosting/store/pub/insts/wiki/manifest.html

--- a/examples/hosting/host/pub/index.html
+++ b/examples/hosting/host/pub/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <h1>host</h1>
-    <input type="text" id="instUri" tabindex="0">
+    <input type="text" id="instUri" size="48" tabindex="0">
     <button type="button" id="add" tabindex="0">add</button>
     <h2>my insts</h2>
     <div id="insts">
