--- a/examples/hosting/store/pub/insts/wiki/manifest.html
+++ b/examples/hosting/store/pub/insts/wiki/manifest.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>wiki inst manifest</h1>
-    <h2 id="id">wiki</h2>
+    <h2 id="name">wiki</h2>
     <h2><a rel="ui" href="ui.html">ui</a></h2>
     <h2>description</h2>
     <div id="description"><p>this is wiki inst</p></div>
