--- a/examples/hosting/store/pub/insts/fileuploader/manifest.html
+++ b/examples/hosting/store/pub/insts/fileuploader/manifest.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>fileuploader inst manifest</h1>
-    <h2 id="id">fileuploader</h2>
+    <h2 id="name">fileuploader</h2>
     <h2><a rel="ui" href="ui.html">ui</a></h2>
     <h2>description</h2>
     <div id="description"><p>this is fileuploader inst</p></div>
