--- a/examples/hosting/store/pub/insts/wall/manifest.html
+++ b/examples/hosting/store/pub/insts/wall/manifest.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>wall inst manifest</h1>
-    <h2 id="id">wall</h2>
+    <h2 id="name">wall</h2>
     <h2><a rel="ui" href="ui.html">ui</a></h2>
     <h2>description</h2>
     <div id="description"><p>this is wall inst</p></div>
