add label for text input field, refs #39
	modified:   hosting/README.ja.md
	modified:   hosting/host/pub/index.html

--- a/examples/hosting/host/pub/index.html
+++ b/examples/hosting/host/pub/index.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     <h1>host</h1>
+    <label for="instUri">inst URI: </label>
     <input type="text" id="instUri" size="48" tabindex="0">
     <button type="button" id="add" tabindex="0">add</button>
     <h2>my insts</h2>
