[rename] streamer as shared libraries
- Streamer => StreamerChannels at shared/streamer/channels.js
- Streams => StreamerSource at shared/streamer/source.js
- OrbStream => StreamerPost at shared/streamer/post.js

--- a/examples/streams/streams/index.html
+++ b/examples/streams/streams/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8" />
 <title>streams agent</title>
 <script src="/shared/contrib/fusion.js"></script>
-<script src="streams.js"></script>
-<script src="orbstream.js"></script>
+<script src="/streamer/source.js"></script>
+<script src="/streamer/post.js"></script>
 <script src="script.js"></script>
 </head>
 <body>
