--- a/examples/streams/ui/index.html
+++ b/examples/streams/ui/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <title>streams</title>
 <script src="//rawgithub.com/kriskowal/q/master/q.js"></script>
-<script src="shared/streamer.js"></script>
+<script src="shared/streamer/channels.js"></script>
 <script src="post.js"></script>
 <script src="script.js"></script>
 </head>
