[update] hackernews example
- switch http://news.ycomb... to https://news.ycomb...

--- a/examples/hackernews/agent/index.html
+++ b/examples/hackernews/agent/index.html
@@ -6,7 +6,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <a id="rootUri" href="http://news.ycombinator.com/">Hacker News</a>
+    <a id="rootUri" href="https://news.ycombinator.com/">Hacker News</a>
     <div class="container">
       <h1 class="title"><a class="src"></a></h1>
       <a class="href"></a>
