--- a/examples/hackernews/pub/index.html
+++ b/examples/hackernews/pub/index.html
@@ -6,7 +6,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <h1>Hacker News</h1>
-    <div id="container"></div>
+    <h1>[Hacker News] Reference list of the first item comments</h1>
+    <div id="container">Please wait...</div>
   </body>
 </html>
