[update] unittest example
- doc.outerHTML to doc.documentElement.outerHTML
- http://example.org/ is not redirected to iana site now

--- a/examples/unittest/src/index.html
+++ b/examples/unittest/src/index.html
@@ -22,7 +22,7 @@ window.addEventListener("agent-load", function (ev) {
 
         ev.detail.respond("200", {
             "content-type": "text/html;charset=utf-8",
-        }, doc.outerHTML);
+        }, doc.documentElement.outerHTML);
     }, false);
 }, false)
 </script>
