--- a/test/assets/agent/embeded.html
+++ b/test/assets/agent/embeded.html
@@ -4,9 +4,9 @@
 <script>//<!--
 "use strict";
 //console.log("boot");
-window.addEventListener("agent-load", function (ev) {
+window.addEventListener("agent-load", ev => {
   //console.log("load");
-  window.addEventListener("agent-access", function (ev) {
+  window.addEventListener("agent-access", ev => {
     //console.log("access");
     if (ev.detail.request.method !== "GET") return;
     ev.detail.accept();
