--- a/examples/w3cnews/pub/index.html
+++ b/examples/w3cnews/pub/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>W3C News</h1>
-    <div id="contents"></div>
+    <div id="contents">Wait a little...</div>
   </body>
 </html>
